--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <i class="fas fa-lg fa-list mr-3 "></i>
         </div>
         <div class="item">
-            <i class="fas fa-lg fa-gavel mr-3 "></i>
+            <i class="fas fa-lg fa-tools mr-3 "></i>
         </div>
         <div appClick (leftOrWheelClick)="onExternalLinkClick('https://github.com')" class="item">
             <i class="fab fa-lg fa-github mr-3 "></i>
