--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,7 +5,7 @@
 :root {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    background-color: #eceff1;
+    background-color: $bg-primary;
 }
 
 html {
