changes colors to dark-style

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,8 +1,7 @@
-$bg-primary: #eceff1;
-$text-primary: rgb(32, 35, 42);
-$text-secondary: #626262;
-$blue: #3e65be;
-$red: #e95555;
-$dark: rgb(30, 30, 45);
-// Cards
-$bg-card: #ffffff;
+$bg-navbar: #21252a;
+$bg-primary: #1a1d21;
+$text-primary: #cfd0d1;
+$text-secondary: #fbfbfb;
+$color-1: #2e71ff;
+$color-2: #e95555;
+$color-3: #f3ca63;
