--- a/src/app/notes/note-editor/note-editor.component.html
+++ b/src/app/notes/note-editor/note-editor.component.html
@@ -8,14 +8,14 @@
         </div>
         <div></div>
         <div class="color-picker">
-            <div (click)="onColorSelect(0)" class="color dark"></div>
-            <div (click)="onColorSelect(1)" class="color red"></div>
-            <div (click)="onColorSelect(2)" class="color blue"></div>
+            <div (click)="note.color = 1" class="color bg-color-1"></div>
+            <div (click)="note.color = 2" class="color bg-color-2"></div>
+            <div (click)="note.color = 3" class="color bg-color-3"></div>
         </div>
     </div>
 
     <div class="editor">
-        <div [ngClass]="{'dark': note.color == 0, 'red': note.color == 1,'blue': note.color ==2}" class="color-banner"></div>
+        <div [ngClass]="{'bg-color-1': note.color == 1, 'bg-color-2': note.color == 2,'bg-color-3': note.color == 3}" class="color-banner"></div>
         <textarea [(ngModel)]="note.content" spellcheck="false" onkeydown="if(event.keyCode===9){var v=this.value,s=this.selectionStart,e=this.selectionEnd;this.value=v.substring(0, s)+'\t'+v.substring(e);this.selectionStart=this.selectionEnd=s+1;return false;}">{{note.content}}</textarea>
     </div>
 </div>
