--- a/src/app/notes/note-list/note-list.component.html
+++ b/src/app/notes/note-list/note-list.component.html
@@ -2,9 +2,8 @@
 <div [@zoomIn]>
     <div class="top">
         <div class="heading">
-            <h3 class="first-bold">
-                <span>Your</span>
-                <span> Notes</span>
+            <h3>
+                <span>Your Notes</span>
             </h3>
             <div class="small">
                 Select one to open it in the editor.
@@ -14,8 +13,7 @@
 
     <div *ngIf="notes.length > 0; else empty">
         <div class="box-main">
-            <app-note-card [routerLink]="[note.id]" routerLinkActive="router-link-active" *ngFor=" let note of notes " [note]="note "></app-note-card>
-            <app-scroll-to-top></app-scroll-to-top>
+            <app-note-card [routerLink]="[note.id]" routerLinkActive="router-link-active" *ngFor="let note of notes" [note]="note"></app-note-card>
         </div>
     </div>
     <ng-template #empty>
