--- a/src/app/notes/note-list/note-list.component.html
+++ b/src/app/notes/note-list/note-list.component.html
@@ -1,5 +1,5 @@
 <app-navbar (itemClicked)="handleAction($event)" [selectedPage]="'list'"></app-navbar>
-<div [@zoomIn]>
+<div [@slideInFromLeft]>
     <div class="top">
         <div class="heading">
             <h3>
