changes btn-delete color to text-secondary

--- a/src/app/notes/note-list/note-card/note-card.component.scss
+++ b/src/app/notes/note-list/note-card/note-card.component.scss
@@ -39,10 +39,10 @@
         i {
             transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
             padding: 10px;
-            color: $red;
+            color: $text-secondary;
             font-size: 20px;
             &:hover {
-                color: darken($color: $red, $amount: 20);
+                color: darken($color: $text-secondary, $amount: 20);
             }
         }
     }
