--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,6 +7,7 @@
     font-size: 15px;
     background-color: $bg-primary;
     color: $text-primary;
+    overflow-x: hidden;
 }
 
 h1,
@@ -15,4 +16,12 @@ h3 {
     font-weight: 400;
     color: $text-secondary;
     text-transform: uppercase;
+}
+
+a {
+    color: $link;
+    &:hover {
+        color: lighten($color: $link, $amount: 10);
+    }
+    text-decoration: none;
 }
