--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,4 +1,5 @@
 @mixin reset {
+    a,
     input,
     button,
     select,
@@ -9,6 +10,7 @@
         font-size: inherit;
         font-style: inherit;
         font-weight: inherit;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     }
     body {
         margin: 0;
