--- a/src/sass/_keyframes.scss
+++ b/src/sass/_keyframes.scss
@@ -6,3 +6,21 @@
         transform: translateY(-20%);
     }
 }
+
+@keyframes rotate {
+    0% {
+        transform: translateX(-50%);
+    }
+    25% {
+        transform: translateY(-50%);
+    }
+    50% {
+        transform: translateX(50%);
+    }
+    75% {
+        transform: translateY(50%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
