sets tap-highlight to transparent globally

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -10,7 +10,9 @@
         font-size: inherit;
         font-style: inherit;
         font-weight: inherit;
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
+    div {
+        -webkit-tap-highlight-color: transparent;
     }
     body {
         margin: 0;
