adds not-found logic when invalid note id is provided through the route

--- a/src/app/notes/note-editor/note-editor.component.scss
+++ b/src/app/notes/note-editor/note-editor.component.scss
@@ -51,3 +51,11 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+
+.not-found {
+    margin-top: 15vh;
+    text-align: center;
+    span {
+        font-weight: 500;
+    }
+}
