--- a/src/app/notes/note-list/note-list.component.scss
+++ b/src/app/notes/note-list/note-list.component.scss
@@ -37,7 +37,7 @@
         margin-top: 50px;
         display: block;
         pointer-events: none;
-        width: 80px;
-        animation: slideUpDown 1s ease infinite alternate;
+        width: 50px;
+        animation: rotate 4s ease infinite;
     }
 }
