updates github link

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <div (click)="onHome()" class="item">
             <i class="fas fa-lg fa-list mr-3 "></i>
         </div>
-        <div appClick (leftOrWheelClick)="onExternalLinkClick('https://github.com')" class="item">
+        <div appClick (leftOrWheelClick)="onExternalLinkClick('https://github.com/Kexplx/ng-notes')" class="item">
             <i class="fab fa-lg fa-github mr-3 "></i>
         </div>
         <div></div>
