FIX: wraps get-back a in span to remove block display

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -2,6 +2,8 @@
     <div class="not-found ">
         <h3>404</h3>
         <span>Couldn't resolve route <b>/{{routeSnapshot}}</b></span>
-        <a [routerLink]="['/notes']">get back</a>
+        <span>
+          <a [routerLink]="['/notes']">Get back</a>
+        </span>
     </div>
 </div>
